src/test/deca/syntax/valid/test_synt/class/method_asm.deca
// Description:
//    Test de déclaration de class ou on utulise une methode avec asm
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
//
// Historique:
//    cree le 20/01/2022

class coordonnees{
    int plan(int z) asm("
        WSTR \"Hello\"
    ");
}