src/test/deca/syntax/invalid/test_synt/class/error_in_method_asm.deca
// Description:
//    Test de déclaration de class ou on utulise une methode avec un mauvais asm dans un bloc
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur dans la methode
//
//
// Historique:
//    cree le 20/01/2022

class coordonnees{
    int x = 5;
    int y = 10 + 204;

    int plan(int z){
        asm();
    }
}

